removal of v1 and v2